# BluetoothTimeout

./: Cargo.toml  README.md  build.rs
src/: app.rs  card.rs  editing.rs  logging.rs  main.rs  notification.rs  spinner.rs  timeout.rs
windows_bluetooth/: Cargo.toml
windows_bluetooth/src/: connect_os.rs  discover.rs  lib.rs  remove.rs  with_err.rs
windows_bluetooth/src/bluetooth_device/: ext.rs  mac_address.rs  mod.rs
